--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -5,14 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YaYing</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/fonts/material-icons.min.css">
+    <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
+    <link rel="stylesheet" href="assets/fonts/typicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arimo">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans">
@@ -26,7 +28,7 @@
         <aside id="sidebar" style="display: none">
             <div>
                 <header id="logo">
-                    <h3 class="text-uppercase" style="font-family:Raleway, sans-serif;">Ya Ying Wang</h3></header>
+                    <h3 class="text-uppercase" style="font-family:Raleway, sans-serif;"><a href="index.html" id="logo-name">Ya Ying Wang </a></h3></header>
             </div>
             <div id="menu">
                 <div class="panel-group" role="tablist" aria-multiselectable="true" id="accordion-1">
@@ -34,7 +36,7 @@
                         <div class="panel-heading" role="tab">
                             <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion-1" aria-expanded="true" href="#accordion-1 .item-1">WORK</a></h4></div>
                         <div class="panel-collapse collapse in item-1" role="tabpanel">
-                            <div class="panel-body"><a href="#">Project 01</a></div>
+                            <div class="panel-body"><a href="project01.html">Project 01</a></div>
                             <div class="panel-body"><a href="#">Project 02 </a></div>
                             <div class="panel-body"><a href="#">Project 03 </a></div>
                             <div class="panel-body"><a href="#">Project 04 </a></div>
@@ -48,127 +50,13 @@
         </aside>
         <div class="container-fluid">
             <div class="content-wrapper">
-                <div class="project-title">
-                    <h1>About Me </h1></div>
-                <div class="project-content" style="display: none">
-                    <div class="table-responsive">
-                        <table class="table meta-data">
-                            <thead style="display: none;">
-                                <tr>
-                                    <th>Column 1</th>
-                                    <th>Column 2</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td><strong>Project Goal</strong> </td>
-                                    <td class="attr-text" style="padding-left: 30px">Design an application which allows users to learn English during their daily commutes </td>
-                                </tr>
-                                <tr>
-                                    <td><strong>Features</strong> </td>
-                                    <td>
-                                        <ul>
-                                            <li> Calculate spare time during each commute </li>
-                                            <li>Provide all kinds of English learning material (articles, audio or videos) </li>
-                                            <li> Automatically arrange the learning material to correspond with commute time </li>
-                                            <li> Allow the users to share their learning or commute routes with friends </li>
-                                        </ul>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td><strong>Collaborators</strong> </td>
-                                    <td class="attr-text" style="padding-left: 30px">Group work </td>
-                                </tr>
-                                <tr>
-                                    <td><strong>My Responsibilities</strong> </td>
-                                    <td>
-                                        <ul>
-                                            <li>Defined and drew the Persona, Flowchart</li>
-                                            <li>Inspired the idea of combining English learning with commutes (collectively with teammate) </li>
-                                            <li> Designed the interfaces (collectively with teammate) </li>
-                                        </ul>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td><strong>UX Methods</strong> </td>
-                                    <td>
-                                        <ul class="list-unstyled attr">
-                                            <li><i class="material-icons attr-icon">done</i>Persona </li>
-                                            <li><i class="material-icons attr-icon">done</i>Flow chart </li>
-                                            <li><i class="material-icons attr-icon">done</i>Functional Map </li>
-                                            <li><i class="material-icons attr-icon">done</i>Microsoft Reaction Card Method (Desirability Testing) </li>
-                                            <li> <i class="material-icons attr-icon">done</i>Wireframes (Paper Prototypes) </li>
-                                        </ul>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><strong>Design Tools</strong> </td>
-                                    <td class="attr-text">
-                                        <ul class="list-unstyled attr">
-                                            <li><i class="material-icons attr-icon">done</i>draw.io </li>
-                                        </ul>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+                <div class="project-title"></div>
+                <section><img src="assets/img/me/4106.jpg" id="cover-photo">
+                    <div style="margin:0 21vw;">
+                        <div style="display:inline-block;margin:0 auto;"><i class="typcn typcn-tree icons" id="tree"></i></div><i class="icon ion-close-round" style="margin:auto 10px;"></i>
+                        <div style="display:inline-block;margin:0 auto;"><i class="material-icons icons">laptop_chromebook</i></div>
                     </div>
-                </div>
-                <div class="project-content" style="position:relative;">
-                    <h2 class="text-uppercase">Education </h2>
-                    <div>
-                        <div class="ex">
-                            <h3 class="place-title">National Chung Hsing University </h3>
-                            <div class="row indent-1">
-                                <div class="col-sm-8">
-                                    <h4>B.S. Forestry Wood Science </h4></div>
-                                <div class="col-sm-4 date">
-                                    <h4>2011 - 2015</h4></div>
-                            </div>
-                            <p class="indent-2">Overall GPA: 3.29 &amp; 3.91 </p>
-                            <p class="indent-2">Ranking: 3 / 30 </p>
-                            <div class="row indent-1">
-                                <div class="col-sm-8">
-                                    <h4>Interdisciplinary Program of Sustainable Environment </h4></div>
-                                <div class="col-sm-4 date">
-                                    <h4>Sep.2012 - Jun.2015</h4>
-                                    <div></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="ex">
-                            <h3>Institute of Information Industry-Digital Education Institute </h3>
-                            <div class="row indent-1">
-                                <div class="col-sm-8">
-                                    <h4>User Experience Design Introduction </h4></div>
-                                <div class="col-sm-4 date">
-                                    <h4>Jul.2017 - Aug.2017</h4></div>
-                            </div>
-                        </div>
-                        <h3>Coursera </h3>
-                        <div class="row indent-1">
-                            <div class="col-sm-8">
-                                <h4>User Experience: Research &amp; Prototyping<span class="separater"> </span>by UC, San Diego</h4></div>
-                            <div class="col-sm-4 date">
-                                <h4>Oct.2017 - Nov.2017</h4></div>
-                        </div>
-                        <div class="row indent-1">
-                            <div class="col-sm-8">
-                                <h4>Information Design<span class="separater"> </span>by UC, San Diego</h4></div>
-                            <div class="col-sm-4 date">
-                                <h4>Oct.2017 - Nov.2017 </h4></div>
-                        </div>
-                        <h4>User Experience: Research &amp; Prototyping by University of California, San Diego</h4>
-                        <h4>Information Design by University of California, San Diego</h4>
-                        <p>p </p>
-                        <p>p </p>
-                    </div>
-                </div>
+                </section><img src="assets/img/me/ThinkingFastAndSlow.jpg" id="test">
                 <div class="divider"><span> </span><span> </span><span> </span><span> </span><span> </span></div>
                 <div class="project-content">
                     <p class="design-attr"><strong>Design Process</strong> </p>
@@ -218,8 +106,8 @@
             <p class="copyright">Ya-Ying Wang© 2017</p>
         </footer>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
