--- a/portfolio/project01.html
+++ b/portfolio/project01.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kalam">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
@@ -34,17 +35,17 @@
                 <div class="panel-group" role="tablist" aria-multiselectable="true" id="accordion-1">
                     <div class="panel panel-default">
                         <div class="panel-heading" role="tab">
-                            <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion-1" aria-expanded="true" href="#accordion-1 .item-1">WORK</a></h4></div>
+                            <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion-1" aria-expanded="true" href="#accordion-1 .item-1" style="font-weight: bold; color: #0089A7">WORK</a></h4></div>
                         <div class="panel-collapse collapse in item-1" role="tabpanel">
                             <div class="panel-body"><a href="project01.html" class="active">Project 01</a></div>
                             <div class="panel-body"><a href="project02.html">Project 02 </a></div>
-                            <div class="panel-body"><a href="#">Project 03 </a></div>
-                            <div class="panel-body"><a href="#">Project 04 </a></div>
+                            <div class="panel-body"><a href="project03.html">Project 03 </a></div>
+                            <div class="panel-body"><a href="project04.html">Project 04 </a></div>
                         </div>
                     </div>
                 </div>
                 <ul class="list-group">
-                    <li class="list-group-item"><a href="#">ABOUT</a></li>
+                    <li class="list-group-item"><a href="about.html">ABOUT</a></li>
                 </ul>
             </div>
         </aside>
@@ -63,17 +64,17 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><strong>Project Goal</strong> </td>
-                                        <td class="attr-text" style="padding-left: 30px">Design an application which allows users to learn English during their daily commutes </td>
+                                        <td>Project Goal </td>
+                                        <td class="attr-text">Design an application which allows users to learn English during their daily commutes </td>
                                     </tr>
                                     <tr>
-                                        <td><strong>Features</strong> </td>
+                                        <td>Feature</td>
                                         <td>
-                                            <ul>
-                                                <li> Calculate spare time during each commute </li>
-                                                <li>Provide all kinds of English learning material (articles, audio or videos) </li>
-                                                <li> Automatically arrange the learning material to correspond with commute time </li>
-                                                <li> Allow the users to share their learning or commute routes with friends </li>
+                                            <ul class="list-unstyled attr">
+                                                <li><i class="typcn typcn-media-record-outline attr-icon"></i>Calculate spare time during each commute&nbsp; </li>
+                                                <li><i class="typcn typcn-media-record-outline attr-icon"></i>Provide all kinds of English learning material (articles, audio or videos)&nbsp;</li>
+                                                <li><i class="typcn typcn-media-record-outline attr-icon"></i>Automatically arrange the learning material to correspond with commute time&nbsp;&nbsp; </li>
+                                                <li><i class="typcn typcn-media-record-outline attr-icon"></i>Allow the users to share their learning or commute routes with friends</li>
                                             </ul>
                                         </td>
                                     </tr>
@@ -91,16 +92,16 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><strong>Collaborators</strong> </td>
-                                        <td class="attr-text" style="padding-left: 30px">Group work (4 people)</td>
+                                        <td>Collaborators </td>
+                                        <td class="attr-text">Group work (4 people)</td>
                                     </tr>
                                     <tr>
-                                        <td><strong>My Responsibilities</strong> </td>
+                                        <td>My Responsibilities </td>
                                         <td>
-                                            <ul>
-                                                <li>Defined and drew the Persona, Flowchart</li>
-                                                <li>Inspired the idea of combining English learning with commutes (collectively with teammate) </li>
-                                                <li> Designed the interfaces (collectively with teammate) </li>
+                                            <ul class="list-unstyled attr">
+                                                <li><i class="typcn typcn-media-record-outline attr-icon"></i>Defined and drew the Persona, Flowchart </li>
+                                                <li><i class="typcn typcn-media-record-outline attr-icon"></i>Inspired the idea of combining English learning with commutes (collectively with teammate)&nbsp;</li>
+                                                <li><i class="typcn typcn-media-record-outline attr-icon"></i>Designed the interfaces (collectively with teammate)&nbsp; </li>
                                             </ul>
                                         </td>
                                     </tr>
@@ -117,7 +118,7 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><strong>UX Methods</strong> </td>
+                                        <td>UX Methods </td>
                                         <td>
                                             <ul class="list-unstyled attr">
                                                 <li><i class="material-icons attr-icon">done</i>Persona </li>
@@ -129,7 +130,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td><strong>Design Tools</strong> </td>
+                                        <td>Design Tools </td>
                                         <td class="attr-text">
                                             <ul class="list-unstyled attr">
                                                 <li><i class="material-icons attr-icon">done</i>draw.io </li>
@@ -146,8 +147,8 @@
                         <div class="text">
                             <h4 class="text-uppercase phase">Discovery </h4>
                             <p>In the discovery phase, we first tried to identify the intended users we wanted to design for. We discussed about the people we encountered with the most, and then settled down on “computers engineers”. </p>
-                            <p>Next, we decided some detailed information about him, including name, gender, age, education, location, family status, etc. These details enables us to get a concrete image of the person we were designing for. </p><img src="assets/img/APP/9CEFB773-E093-412A-A391-AF06502ED0E4.jpg"
-                            style="width: 42%"><span class="image-title">-Persona- </span><img src="assets/img/APP/Persona_Ideas.jpg" style="width: 100%">
+                            <p>Next, we decided some detailed information about him, including name, gender, age, education, location, family status, etc. These details enables us to get a concrete image of the person we were designing for. </p><img src="assets/img/APP/Persona_Ideas.jpg"
+                            style="width: 100%"><span class="image-title">-Persona (+ ideas sticky notes)- </span>
                             <p>After defining the target users, we started to brainstorm about things that he might do or need in every aspect of his daily life, from food, clothing, housing, transportation, education to entertainment. We used posted notes
                                 to recorded and visualized our ideas.We found our ideas converged on commute and learning, for that engineers in Taipei spend a long time on commutes each day while having little time to keep on enhancing their English
                                 ability. Therefore, we thought about combining the two, which formed the goal of our APP—learning English in commutes. </p>
@@ -161,7 +162,7 @@
                                 <p>We also delineated the Functional Map to define the primary functions of the application, which were divided into four categories: “travel route”, “course content”, "general settings", and "sharing with friends". </p>
                                 <div
                                 class="divider"><span> </span><span> </span><span> </span></div>
-                        <h4 class="text-uppercase phase">Design </h4><img src="assets/img/APP/07FCC916-8A94-4419-A4AA-F508917C7235.jpg" style="width: 50%"><img src="assets/img/APP/39622DA1-1A83-405F-8CF7-79BC13DC7923.jpg" style="width: 50%"><span class="image-title"><em>-</em>Paper Prototypes<em>-</em> </span>
+                        <h4 class="text-uppercase phase">Design </h4><img src="assets/img/APP/IMG_7755.jpg"><img src="assets/img/APP/IMG_7735.jpg" style="width: 50%"><img src="assets/img/APP/IMG_7738.jpg" style="width: 50%"><span class="image-title"><em>-</em>Paper Prototypes<em>-</em> </span>
                         <p>We drew paper wireframes of every screen in the app, including that of the homepage, methods of transportation, course content, and user profile. In the next step, we cut the elements to arrange them more easily on the screen and
                             explore better ways of placement. </p>
                         <p>In this part, I was in charge of designing half of the interfaces, which included setting commute paths and the learning page. I created my assigned interfaces using several English learning applications, maps, and public transportation
