--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kalam">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
@@ -25,7 +26,7 @@
 
 <body id="ya">
     <div>
-        <aside id="sidebar" style="display: none">
+        <aside id="sidebar">
             <div>
                 <header id="logo">
                     <h3 class="text-uppercase" style="font-family:Raleway, sans-serif;"><a href="index.html" id="logo-name">Ya Ying Wang </a></h3></header>
@@ -44,65 +45,36 @@
                     </div>
                 </div>
                 <ul class="list-group">
-                    <li class="list-group-item"><a href="#" class="active">ABOUT</a></li>
+                    <li class="list-group-item"><a href="about.html" style="font-weight: bold; color: #0089A7">ABOUT</a></li>
                 </ul>
             </div>
         </aside>
         <div class="container-fluid">
             <div class="content-wrapper">
                 <div class="project-title"></div>
-                <section><img src="assets/img/me/4106.jpg" id="cover-photo">
-                    <div style="margin:0 21vw;">
-                        <div style="display:inline-block;margin:0 auto;"><i class="typcn typcn-tree icons" id="tree"></i></div><i class="icon ion-close-round" style="margin:auto 10px;"></i>
-                        <div style="display:inline-block;margin:0 auto;"><i class="material-icons icons">laptop_chromebook</i></div>
+                <section style="margin:10vh 23vw;"><img src="assets/img/me/4106.jpg" id="cover-photo">
+                    <div style="margin:40px auto;text-align:center;">
+                        <div style="display:inline-block;margin:0 auto;"><i class="typcn typcn-tree icons"></i><i class="typcn typcn-tree icons"></i><i class="typcn typcn-tree icons"></i></div><i class="icon ion-close-round" style="margin:auto 10px;"></i>
+                        <div style="display:inline-block;margin:0 auto;"><i class="material-icons icons">laptop_chromebook</i><i class="material-icons icons">laptop_chromebook</i><i class="material-icons icons">laptop_chromebook</i></div>
                     </div>
-                </section><img src="assets/img/me/ThinkingFastAndSlow.jpg" id="test">
-                <div class="divider"><span> </span><span> </span><span> </span><span> </span><span> </span></div>
-                <div class="project-content">
-                    <p class="design-attr"><strong>Design Process</strong> </p>
-                    <div class="process-content">
-                        <h4 class="text-uppercase phase">Discovery </h4>
-                        <p>In the discovery phase, we first tried to identify the intended users we wanted to design for. We discussed about the people we encountered with the most, and then settled down on “computers engineers”. </p>
-                        <p>Next, we decided some detailed information about him, including name, gender, age, education, location, family status, etc. These details enables us to get a concrete image of the person we were designing for. </p><img src="assets/img/APP/9CEFB773-E093-412A-A391-AF06502ED0E4.jpg"
-                        style="width: 42%"><span class="image-title">-Persona- </span><img src="assets/img/APP/Persona_Ideas.jpg" style="width: 100%">
-                        <p>After defining the target users, we started to brainstorm about things that he might do or need in every aspect of his daily life, from food, clothing, housing, transportation, education to entertainment. We used posted notes to
-                            recorded and visualized our ideas.We found our ideas converged on commute and learning, for that engineers in Taipei spend a long time on commutes each day while having little time to keep on enhancing their English ability.
-                            Therefore, we thought about combining the two, which formed the goal of our APP—learning English in commutes. </p>
-                        <p>We decided the function of the APP to be providing schedules of the learning material (articles, audios or videos) according to the estimated odds times of the commute automatically (calculated by combining the time table of the
-                            public transportation). </p>
-                        <div class="divider"><span> </span><span> </span><span> </span></div>
-                        <p>After defined the persona and the goal, we then began to delineate the Flow Chart and Functional Map. </p><img src="assets/img/APP/APP Flowchart.png" style="margin-top: 0px"><span class="image-title">-Flowchart- </span>
-                        <p>The flowchart elaborated on the processes of the main task, which was the user’s overall interactions with the application through choosing a commute route and learning content according to the scheduled time. </p><img src="assets/img/APP/Learning English in Commute.png">
-                        <span
-                        class="image-title"><em>Functional Map</em> </span>
-                            <p>We also delineated the Functional Map to define the primary functions of the application, which were divided into four categories: “travel route”, “course content”, "general settings", and "sharing with friends". </p>
-                            <div class="divider"><span> </span><span> </span><span> </span></div>
-                            <h4 class="text-uppercase phase">Design </h4><img src="assets/img/APP/07FCC916-8A94-4419-A4AA-F508917C7235.jpg" style="width: 50%"><img src="assets/img/APP/39622DA1-1A83-405F-8CF7-79BC13DC7923.jpg" style="width: 50%"><span class="image-title">Paper Prototypes </span>
-                            <p>We drew paper wireframes of every screen in the app, including that of the homepage, methods of transportation, course content, and user profile. In the next step, we cut the elements to arrange them more easily on the screen
-                                and explore better ways of placement. </p>
-                            <p>In this part, I was in charge of designing half of the interfaces, which included setting commute paths and the learning page. I created my assigned interfaces using several English learning applications, maps, and public transportation
-                                as references for inspiration. </p>
-                            <div class="divider"><span> </span><span> </span><span> </span></div>
-                            <h4 class="text-uppercase phase">Evaluation </h4><img src="assets/img/APP/4D746921-D604-474F-BD1F-C87286B6909B.jpg" style="width: 50%"><span class="image-title">Microsoft Reaction Card Method (Desirability Testing) </span>
-                            <p>In the last part of evaluation, we invited a classmate from another group to evaluate our design using the Reaction Card Method by Microsoft. </p>
-                            <p>After listening to our explanations on the design, he had to choose five positive and negative adjectives that best fit his thoughts. The positive words he chose were integrated, clear, organized, predictable, and usable, while
-                                the negative words were disconnected, time-consuming, distracting, complex and irrelevant. </p>
-                            <div class="divider"><span> </span><span> </span><span> </span><span> </span><span> </span></div>
-                            <p class="design-attr"><strong>Reflection</strong> </p>
-                            <p>In designing this application, I became aware of the importance of having a clear functional map. The limited amount of time meant that we thoroughly expanded on the flowchart, but unfortunately left the functional map somewhat
-                                lacking in comparison. Later in the interface creation process, we added many more functions than we had originally planned and had to constantly confirm the structure of the app. I believe that was the reason why the negative
-                                feedback from the evaluation included the words “<em>disconnected” </em>and “<em>irrelevant”</em>. </p>
-                            <p>Besides the concept of having a clear start, I also found it fascinating to work with people from different backgrounds. Everyone kept coming up with new ideas, such as paid features or adding advertisements, which further
-                                enriched our design, and all played a different yet essential role in the design process. I was convinced that each member could be a good designer in their own right, provided that they are equipped with a proper method
-                                of design thinking. </p>
-                    </div>
-                </div>
+                </section>
+                <section class="about-info">
+                    <h4>Education </h4>
+                    <p class="about-item">National Chung Hsing University (Taiwan)</p>
+                    <p class="about-item">Institute for Information Industry </p>
+                    <p class="about-item">Coursera </p>
+                    <p class="about-item">Hahow Online Courses</p>
+                    <h4>Work </h4>
+                    <p class="about-item">United Daily News Digital </p>
+                    <h4>Books I love</h4><img src="assets/img/me/81zpLhP1gWL.jpg" class="books"><img src="assets/img/me/ThinkingFastAndSlow.jpg" class="books"><img src="assets/img/TheArtOfThinkingClearly.png" class="books"><img src="assets/img/me/41UYuubxN8L.jpg" class="books"><img src="assets/img/me/a20120619162442_0.jpg" class="books">
+                    <h4>Quote I love </h4>
+                    <p class="quote">"Don't be afraid of being different, be afraid of being the same as everyone else."</p>
+                </section>
             </div>
         </div>
     </div>
     <div class="footer-basic">
         <footer>
-            <div class="project-links"><a href="#" id="prev"><i class="icon-arrow-left"></i></a><a class="text-uppercase" href="#">View All Projects</a><a href="#" id="next"><i class="icon-arrow-right"></i></a></div>
             <p class="copyright">Ya-Ying Wang© 2017</p>
         </footer>
     </div>
