--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kalam">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
@@ -36,7 +37,7 @@
                         <div class="panel-heading" role="tab">
                             <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion-1" aria-expanded="true" href="#accordion-1 .item-1">WORK</a></h4></div>
                         <div class="panel-collapse collapse in item-1" role="tabpanel">
-                            <div class="panel-body"><a href="project01.html" class="active">Project 01</a></div>
+                            <div class="panel-body"><a href="project01.html">Project 01</a></div>
                             <div class="panel-body"><a href="project02.html">Project 02 </a></div>
                             <div class="panel-body"><a href="#">Project 03 </a></div>
                             <div class="panel-body"><a href="#">Project 04 </a></div>
@@ -49,24 +50,22 @@
             </div>
         </aside>
         <div class="container-fluid">
-            <section style="height: 550px">
-                <div class="project-title">
-                    <h1>Hello, </h1></div>
+            <section style="height:220px;margin-top:200px;">
+                <h2>Hello, I am Ya-Ying. </h2>
+                <h2 style="display:inline;margin-right:10px;">A person intrigued by</h2>
+                <p id="typing-content" style="display: inline-block">design + psychology + technology. </p>
             </section>
             <section>
-                <h3>Selected Works </h3>
-                <div class="row">
-                    <button class="btn btn-link menu col-sm-6" type="button">Learning English in Commutes<span style="display: block">Mobile APP </span></button>
-                    <button class="btn btn-link menu col-sm-6" type="button">Omnicle Tutorial Website&nbsp; </button>
-                    <button class="btn btn-link menu col-sm-6" type="button">Redesigning Taiwan Railway Website</button>
-                    <button class="btn btn-link menu col-sm-6" type="button">Making Sense of Data </button>
+                <h4 style="margin-left: 5px">Selected Works </h4>
+                <div class="row"><a href="project01.html" class="col-sm-6 menu">Learning English in Commutes Mobile APP</a><a href="project02.html" class="col-sm-6 menu">Omnicle Tutorial Website </a><a href="project03.html" class="col-sm-6 menu">Redesigning Taiwan Railway Website </a>
+                    <a
+                    href="project04.html" class="col-sm-6 menu">Making Sense of Data&nbsp; </a>
                 </div>
             </section>
         </div>
     </div>
     <div class="footer-basic">
         <footer>
-            <div class="project-links"><a href="#" id="prev"><i class="icon-arrow-left"></i></a><a class="text-uppercase" href="#">View All Projects</a><a href="#" id="next"><i class="icon-arrow-right"></i></a></div>
             <p class="copyright">Ya-Ying Wang© 2017</p>
         </footer>
     </div>
