--- a/portfolio/project02.html
+++ b/portfolio/project02.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kalam">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
@@ -34,24 +35,24 @@
                 <div class="panel-group" role="tablist" aria-multiselectable="true" id="accordion-1">
                     <div class="panel panel-default">
                         <div class="panel-heading" role="tab">
-                            <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion-1" aria-expanded="true" href="#accordion-1 .item-1">WORK</a></h4></div>
+                            <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion-1" aria-expanded="true" href="#accordion-1 .item-1" style="font-weight: bold; color: #0089A7">WORK</a></h4></div>
                         <div class="panel-collapse collapse in item-1" role="tabpanel">
-                            <div class="panel-body"><a href="#" class="active">Project 01</a></div>
-                            <div class="panel-body"><a href="#">Project 02 </a></div>
-                            <div class="panel-body"><a href="#">Project 03 </a></div>
-                            <div class="panel-body"><a href="#">Project 04 </a></div>
+                            <div class="panel-body"><a href="project01.html">Project 01</a></div>
+                            <div class="panel-body"><a href="project02.html" class="active">Project 02 </a></div>
+                            <div class="panel-body"><a href="project03.html">Project 03 </a></div>
+                            <div class="panel-body"><a href="project04.html">Project 04 </a></div>
                         </div>
                     </div>
                 </div>
                 <ul class="list-group">
-                    <li class="list-group-item"><a href="#">ABOUT</a></li>
+                    <li class="list-group-item"><a href="about.html">ABOUT</a></li>
                 </ul>
             </div>
         </aside>
         <article>
             <div class="container-fluid">
                 <section>
-                    <h1 class="project-title"><strong>Omnicle Tutorial Website</strong> </h1>
+                    <h1 class="project-title">Omnicle Tutorial Website </h1>
                     <div class="project-content">
                         <div class="table-responsive">
                             <table class="table meta-data">
@@ -63,16 +64,16 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><strong>Project Goal</strong> </td>
-                                        <td class="attr-text" style="padding-left: 30px">Build a documentation website to instruct users on the functions and procedures of Omnicle (the Content Management System of United Daily News) </td>
+                                        <td>Project Goal </td>
+                                        <td class="attr-text">Build a documentation website to instruct users on the functions and procedures of Omnicle (the Content Management System of United Daily News) </td>
                                     </tr>
                                     <tr>
-                                        <td><strong>Features</strong> </td>
+                                        <td>Features </td>
                                         <td>
-                                            <ul>
-                                                <li>Detailed, step-by-step explanations of the functions </li>
-                                                <li>Several working scenarios explaining common tasks for both paper and digital formats </li>
-                                                <li>Interactive demonstration displaying each section of the Omnicle interface </li>
+                                            <ul class="list-unstyled attr">
+                                                <li><i class="typcn typcn-media-record-outline attr-icon"></i>Detailed, step-by-step explanations of the functions</li>
+                                                <li><i class="typcn typcn-media-record-outline attr-icon"></i>Several working scenarios explaining common tasks for both paper and digital formats&nbsp;</li>
+                                                <li><i class="typcn typcn-media-record-outline attr-icon"></i>Interactive demonstration displaying each section of the Omnicle interface</li>
                                             </ul>
                                         </td>
                                     </tr>
@@ -90,16 +91,16 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><strong>Collaborators</strong> </td>
-                                        <td class="attr-text" style="padding-left: 30px">Project Manager / Project Leader</td>
+                                        <td>Collaborators </td>
+                                        <td class="attr-text">Project Manager / Project Leader</td>
                                     </tr>
                                     <tr>
-                                        <td><strong>My Responsibilities</strong> </td>
+                                        <td>My Responsibilities </td>
                                         <td>
-                                            <ul>
-                                                <li>Organized the documentation content: system introduction, functions and description of work procedure </li>
-                                                <li>Created mockups designing site structure and layout </li>
-                                                <li>Built actual website with Bootstrap Studio </li>
+                                            <ul class="list-unstyled attr">
+                                                <li><i class="typcn typcn-media-record-outline attr-icon"></i>Organized documentation content: system introduction, functions and description of work procedure</li>
+                                                <li><i class="typcn typcn-media-record-outline attr-icon"></i>Created mockups designing site structure and layout</li>
+                                                <li><i class="typcn typcn-media-record-outline attr-icon"></i>Built actual website with Bootstrap Studio&nbsp;</li>
                                             </ul>
                                         </td>
                                     </tr>
@@ -116,7 +117,7 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><strong>Design Tools</strong> </td>
+                                        <td>Design Tools </td>
                                         <td>
                                             <ul class="list-unstyled attr">
                                                 <li><i class="material-icons attr-icon">done</i>Sketch</li>
@@ -125,7 +126,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td><strong>Browsers</strong> </td>
+                                        <td>Browsers </td>
                                         <td class="attr-text">
                                             <ul class="list-unstyled attr">
                                                 <li><i class="material-icons attr-icon">done</i>Chrome </li>
@@ -145,15 +146,16 @@
                             <p>In the initial conception stage, I studied the tutorial website of another production system designed for reporters to produce news drafts, and used it as a guide to design Omnicle documentation. </p>
                             <h4 class="text-uppercase phase">Design </h4>
                             <p>I created three mockups using Sketch for discussion purposes with the project manager and the leader. In each mockup, I used different color styles and experimented with different arrangements, such as that of the navigation
-                                bar. </p><img src="assets/img/Omnicle/Mockup_lightblue.png" style="width:33%;margin-right:3px;"><img src="assets/img/Omnicle/side-menus-09.png" style="width:33%;margin-right:2px;"><img src="assets/img/Omnicle/side-menus-11.png" style="width:33%;"><span class="image-title">-Mockups- </span>
+                                bar. </p><img src="assets/img/Omnicle/Mockup_lightblue.png" class="bordered-img" style="width:33%;margin-right:3px;"><img src="assets/img/Omnicle/side-menus-09.png" class="bordered-img" style="width:33%;margin-right:2px;"><img src="assets/img/Omnicle/side-menus-11.png" class="bordered-img"
+                            style="width:33%;"><span class="image-title">-Mockups- </span>
                             <p>In the end, I affixed the navigation to the left-hand side and decided to allot it ¼ of the page width, which left ¾ of the space for main content (with infinite scrolling), due to the majority of employees in UDN (and myself)
                                 using 19 inch-width screens.</p>
                             <p>I designed this arrangement for two reasons:</p>
                             <ul>
                                 <li>The width of the text and image content should not be too wide, or it will be hard to read. </li>
                                 <li>With the fixed left navigation, the reader can easily browse through content to findwhat they want and without switching between many tabs. </li>
-                            </ul><img src="assets/img/Omnicle/報版版型.png"><span class="image-title">-Final Website- </span>
-                            <p>In building the final website, I relied on the mockups while continuing to revise the layoutof the content. </p>
+                            </ul><img src="assets/img/Omnicle/報版版型.png" class="bordered-img"><span class="image-title">-Final Website- </span>
+                            <p>In building the final website, I relied on the mockups while continuing to revise the layout of the content. </p>
                             <p>Considering that a majority of users may visit this tutorial website when they need someinstruction during their work of news production, which was usually in a rush, the goalhere was to provide the users with a clear and plain
                                 layout so that they can easily andquickly find what they are looking for. </p>
                             <p>I also added in certain interesting features. For example, I created font size buttons atthe top of the page to provide three options for content text size, allowing the reader tocustomize for comfort. </p>
@@ -180,7 +182,7 @@
     </div>
     <div class="footer-basic">
         <footer>
-            <div class="project-links"><a href="project01.html" id="prev"><i class="icon-arrow-left"></i></a><a class="text-uppercase" href="#">View All Projects</a><a href="#" id="next"><i class="icon-arrow-right"></i></a></div>
+            <div class="project-links"><a href="project01.html" id="prev"><i class="icon-arrow-left"></i></a><a class="text-uppercase" href="#">View All Projects</a><a href="project03.html" id="next"><i class="icon-arrow-right"></i></a></div>
             <p class="copyright">Ya-Ying Wang© 2017</p>
         </footer>
     </div>
