1. change menu and pager style     2. renew date

--- a/portfolio/project02.html
+++ b/portfolio/project02.html
@@ -182,8 +182,8 @@
     </div>
     <div class="footer-basic">
         <footer>
-            <div class="project-links"><a href="project01.html" id="prev"><i class="icon-arrow-left"></i></a><a class="text-uppercase" href="#">View All Projects</a><a href="project03.html" id="next"><i class="icon-arrow-right"></i></a></div>
-            <p class="copyright">Ya-Ying Wang© 2017</p>
+            <div class="project-links"><a href="project01.html" id="prev"><i class="icon-arrow-left"></i></a><a class="text-uppercase" href="index.html">View All Projects</a><a href="project03.html" id="next"><i class="icon-arrow-right"></i></a></div>
+            <p class="copyright">Ya-Ying Wang© 2018</p>
         </footer>
     </div>
     <script src="assets/js/jquery.min.js"></script>
