--- a/portfolio/project03.html
+++ b/portfolio/project03.html
@@ -142,8 +142,9 @@
                                 <li style="list-style: none">Buy the Available Ticketsfor a recent date (ex: tomorrow).&nbsp; </li>
                             </ul><img src="assets/img/project03/Wireframe---first-task-1.png"><img src="assets/img/project03/Wireframe---second-task-1.png"><span class="image-title">-Wireframes- </span>
                             <p>I added in a process bar to indicate the length of the booking procedure, which I felt would allow the users to better envision the general procedure of the task. I also added in a section showing search results to allow users
-                                to choose tickets by themselves, which was not an option on the original website. </p><img src="assets/img/project03/MockUp-laptop-1.png" class="bordered-img" style="width: 48%; margin-right: 3px"><img src="assets/img/project03/MockUp-laptop-2.png" class="bordered-img"
-                            style="width: 48%"><img src="assets/img/project03/MockUp-tablet-1.png" class="bordered-img" style="width: 34%; margin-right: 3px"><img src="assets/img/project03/MockUp-tablet-2.png" class="bordered-img" style="width: 34%">
+                                to choose tickets by themselves, which was not an option on the original website. </p>
+                            <div class="divider"><span> </span><span> </span><span> </span></div><img src="assets/img/project03/MockUp-laptop-1.png" class="bordered-img" style="width: 48%; margin-right: 3px"><img src="assets/img/project03/MockUp-laptop-2.png" class="bordered-img" style="width: 48%"><img src="assets/img/project03/MockUp-tablet-1.png"
+                            class="bordered-img" style="width: 34%; margin-right: 3px"><img src="assets/img/project03/MockUp-tablet-2.png" class="bordered-img" style="width: 34%">
                             <div><img src="assets/img/project03/MockUp-phone-1.png" class="bordered-img" style="width: 28%; margin-right: 3px"><img src="assets/img/project03/MockUp-phone-2.png" class="bordered-img" style="width: 28%"></div><span class="image-title">-Mocups- (laptop, tablet, phone) </span>
                             <p>I later used Sketch to create mockups for booking round-trip tickets in order to highlight the significance of typography and color in the look and feel of the website. </p>
                             <p>I designed the mockups around three form factors (phones, tablets and laptops) to get a feel for the best style and layout that works for each screen size. </p>
@@ -164,8 +165,8 @@
     </div>
     <div class="footer-basic">
         <footer>
-            <div class="project-links"><a href="project02.html" id="prev"><i class="icon-arrow-left"></i></a><a class="text-uppercase" href="#">View All Projects</a><a href="project04.html" id="next"><i class="icon-arrow-right"></i></a></div>
-            <p class="copyright">Ya-Ying Wang© 2017</p>
+            <div class="project-links"><a href="project02.html" id="prev"><i class="icon-arrow-left"></i></a><a class="text-uppercase" href="index.html">View All Projects</a><a href="project04.html" id="next"><i class="icon-arrow-right"></i></a></div>
+            <p class="copyright">Ya-Ying Wang© 2018</p>
         </footer>
     </div>
     <script src="assets/js/jquery.min.js"></script>
