--- a/portfolio/project04.html
+++ b/portfolio/project04.html
@@ -173,8 +173,8 @@
     </div>
     <div class="footer-basic">
         <footer>
-            <div class="project-links"><a href="project03.html" id="prev"><i class="icon-arrow-left"></i></a><a class="text-uppercase" href="#">View All Projects</a></div>
-            <p class="copyright">Ya-Ying Wang© 2017</p>
+            <div class="project-links"><a href="project03.html" id="prev"><i class="icon-arrow-left"></i></a><a class="text-uppercase" href="index.html">View All Projects</a></div>
+            <p class="copyright">Ya-Ying Wang© 2018</p>
         </footer>
     </div>
     <script src="assets/js/jquery.min.js"></script>
