--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -66,6 +66,7 @@
                     <p class="about-item">Hahow Online Courses</p>
                     <h4>Work </h4>
                     <p class="about-item">United Daily News Digital </p>
+                    <p class="about-item">New Taipei City Yinnge Elementary School </p>
                     <h4>Books I love</h4><img src="assets/img/me/81zpLhP1gWL.jpg" class="books"><img src="assets/img/me/ThinkingFastAndSlow.jpg" class="books"><img src="assets/img/TheArtOfThinkingClearly.png" class="books"><img src="assets/img/me/41UYuubxN8L.jpg" class="books"><img src="assets/img/me/a20120619162442_0.jpg" class="books">
                     <h4>Quote I love </h4>
                     <p class="quote">"Don't be afraid of being different, be afraid of being the same as everyone else."</p>
@@ -75,7 +76,7 @@
     </div>
     <div class="footer-basic">
         <footer>
-            <p class="copyright">Ya-Ying Wang© 2017</p>
+            <p class="copyright">Ya-Ying Wang© 2018</p>
         </footer>
     </div>
     <script src="assets/js/jquery.min.js"></script>
