--- a/portfolio/project01.html
+++ b/portfolio/project01.html
@@ -190,8 +190,8 @@
     </div>
     <div class="footer-basic">
         <footer>
-            <div class="project-links"><a class="text-uppercase" href="#">View All Projects</a><a href="project02.html" id="next"><i class="icon-arrow-right"></i></a></div>
-            <p class="copyright">Ya-Ying Wang© 2017</p>
+            <div class="project-links"><a class="text-uppercase" href="index.html">View All Projects</a><a href="project02.html" id="next"><i class="icon-arrow-right"></i></a></div>
+            <p class="copyright">Ya-Ying Wang© 2018</p>
         </footer>
     </div>
     <script src="assets/js/jquery.min.js"></script>
