edited info in "About Page"

--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -38,9 +38,9 @@
                             <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion-1" aria-expanded="true" href="#accordion-1 .item-1">WORK</a></h4></div>
                         <div class="panel-collapse collapse in item-1" role="tabpanel">
                             <div class="panel-body"><a href="project01.html">Project 01</a></div>
-                            <div class="panel-body"><a href="#">Project 02 </a></div>
-                            <div class="panel-body"><a href="#">Project 03 </a></div>
-                            <div class="panel-body"><a href="#">Project 04 </a></div>
+                            <div class="panel-body"><a href="project02.html">Project 02 </a></div>
+                            <div class="panel-body"><a href="project03.html">Project 03 </a></div>
+                            <div class="panel-body"><a href="project04.html">Project 04 </a></div>
                         </div>
                     </div>
                 </div>
@@ -60,12 +60,12 @@
                 </section>
                 <section class="about-info">
                     <h4>Education </h4>
-                    <p class="about-item">National Chung Hsing University (Taiwan)</p>
-                    <p class="about-item">Institute for Information Industry </p>
+                    <p class="about-item">National Chung Hsing University</p>
+                    <p class="about-item">Institute for Information Industry<a href="https://web.iii.org.tw/" target="_blank" class="related-page"><i class="material-icons">open_in_new</i></a></p>
                     <p class="about-item">Coursera </p>
-                    <p class="about-item">Hahow Online Courses</p>
+                    <p class="about-item">Hahow Online Courses<a href="https://www.linkedin.com/company/hahow-%E5%A5%BD%E5%AD%B8%E6%A0%A1/?originalSubdomain=tw" target="_blank" class="related-page"><i class="material-icons">open_in_new</i></a></p>
                     <h4>Work </h4>
-                    <p class="about-item">United Daily News Digital </p>
+                    <p class="about-item">udnDigital.Co<a href="http://www.udndigital.com.tw/" target="_blank" class="related-page"><i class="material-icons">open_in_new</i></a></p>
                     <p class="about-item">New Taipei City Yinnge Elementary School </p>
                     <h4>Books I love</h4><img src="assets/img/me/81zpLhP1gWL.jpg" class="books"><img src="assets/img/me/ThinkingFastAndSlow.jpg" class="books"><img src="assets/img/TheArtOfThinkingClearly.png" class="books"><img src="assets/img/me/41UYuubxN8L.jpg" class="books"><img src="assets/img/me/a20120619162442_0.jpg" class="books">
                     <h4>Quote I love </h4>
